-(Hopefully final) fix for description text wrapping in IE.
git-svn-id: http://svn.civicrm.org/civicrm/trunk@19038 cff41f8d-9fe8-0310-9d4e-fb156a3ffe5e

--- a/packages/dojo/dijit/themes/tundra/tundra.css
+++ b/packages/dojo/dijit/themes/tundra/tundra.css
@@ -1,5 +1,10 @@
 
 @import url("../dijit.css");
+
+#crm-container .form-layout .tundra {
+  white-space: normal;
+}
+
 .tundra .dijitSliderDisabled *,
 .tundra .dijitDisabledClickableRegion,	
 .tundra .dijitSpinnerDisabled *,
